--- a/src/App.css
+++ b/src/App.css
@@ -1372,8 +1372,41 @@ span {
 
 @media screen and (max-width: 767px) {
   .main {
-    width: 170vh;
-    height: 900vh;
+    width: 210vh;
+    height: 1100vh;
+  }
+
+  .card1 {
+    position: relative;
+    left: 150px;
+  }
+
+  .card11 {
+    position: relative;
+    left: 160px;
+  }
+
+  .card2 {
+    position: relative;
+    left: 160px;
+  }
+
+  .card3 {
+    position: relative;
+    left: 160px;
+  }
+
+  .service-head {
+    position: absolute;
+    left: 500px;
+  }
+
+}
+
+@media screen and (min-width: 400px) {
+  .main {
+    width: 200vh;
+    height: 1400vh;
   }
 
   .card1 {
